[gd_scene load_steps=49 format=2]

[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Audio/click1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Audio/Damage.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/sfx_lose.ogg" type="AudioStream" id=4]
[ext_resource path="res://Audio/Fireball.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/Jump.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Grab Item (High Tone).wav" type="AudioStream" id=7]
[ext_resource path="res://Characters/Player/Jump 1.png" type="Texture" id=8]
[ext_resource path="res://Characters/Player/Jump 2.png" type="Texture" id=9]
[ext_resource path="res://Characters/Player/Jump Damage.png" type="Texture" id=10]
[ext_resource path="res://Characters/Player/Red Mage.png" type="Texture" id=11]
[ext_resource path="res://Characters/Player/Idle.png" type="Texture" id=12]
[ext_resource path="res://Characters/Player/Damage.png" type="Texture" id=13]
[ext_resource path="res://Characters/Player/Red Mage Dead/Dead 1.png" type="Texture" id=14]
[ext_resource path="res://Characters/Player/Red Mage Dead/Dead 2.png" type="Texture" id=15]
[ext_resource path="res://Characters/Player/Red Mage Dead/Dead 3.png" type="Texture" id=16]
[ext_resource path="res://Characters/Player/Red Mage Dead/Dead 4.png" type="Texture" id=17]
[ext_resource path="res://Characters/Player/Red Mage Dead/Dead 5.png" type="Texture" id=18]
[ext_resource path="res://Characters/Player/Red Mage Dead/Dead 6.png" type="Texture" id=19]
[ext_resource path="res://Characters/Player/Red Mage Dead/Dead 7.png" type="Texture" id=20]
[ext_resource path="res://Characters/Player/Red Mage Walking 2/walk 1.png" type="Texture" id=21]
[ext_resource path="res://Characters/Player/Red Mage Walking 2/walk 2.png" type="Texture" id=22]
[ext_resource path="res://Characters/Player/Red Mage Walking 2/walk 3.png" type="Texture" id=23]
[ext_resource path="res://Characters/Player/walk 3.png" type="Texture" id=24]
[ext_resource path="res://Characters/Player/walk 4.png" type="Texture" id=25]
[ext_resource path="res://Characters/Player/Red Mage Walking 2/walk 4.png" type="Texture" id=26]
[ext_resource path="res://User Interface/Kenney Pixel.ttf" type="DynamicFontData" id=27]
[ext_resource path="res://User Interface/Health Bar/Health Bar 1.png" type="Texture" id=28]
[ext_resource path="res://User Interface/Health Bar/Health bar 2.png" type="Texture" id=29]
[ext_resource path="res://User Interface/Health Bar/Health bar 3.png" type="Texture" id=30]
[ext_resource path="res://User Interface/Health Bar/Health bar 4.png" type="Texture" id=31]
[ext_resource path="res://User Interface/Health Bar/Health Bar.png" type="Texture" id=32]
[ext_resource path="res://User Interface/Health Bar/Health bar 5.png" type="Texture" id=33]
[ext_resource path="res://User Interface/Mana Bar/Mana Bar (5).png" type="Texture" id=34]
[ext_resource path="res://User Interface/Mana Bar/Mana Bar (2).png" type="Texture" id=35]
[ext_resource path="res://User Interface/Mana Bar/Mana Bar (3).png" type="Texture" id=36]
[ext_resource path="res://User Interface/Mana Bar/Mana Bar.png" type="Texture" id=37]
[ext_resource path="res://User Interface/Mana Bar/Mana Bar (1).png" type="Texture" id=38]
[ext_resource path="res://User Interface/Mana Bar/Mana Bar (4).png" type="Texture" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "JumpDamage",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "Damage",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "Dead",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 16 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 27 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "4Hp",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "3Hp",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "2Hp",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "1Hp",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "5Hp",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "0Hp",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "0Mana",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "3Mana",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "2Mana",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "5Mana",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "4Mana",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "1Mana",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 27 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Lower Volume"

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="FireballCast" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Lower Volume"

[node name="GrabPotionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.996502, 0 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="Collision2" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 0.996502, 0 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="PositionRight" type="Position2D" parent="."]
position = Vector2( 22.4595, 0 )

[node name="PositionLeft" type="Position2D" parent="."]
position = Vector2( -19.9666, -0.110184 )

[node name="FireballCooldown" type="Timer" parent="."]

[node name="Invincibility" type="Timer" parent="."]

[node name="GameOverDelay" type="Timer" parent="."]

[node name="ManaRegeneration" type="Timer" parent="."]

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Pause" type="Control" parent="PauseLayer"]
pause_mode = 2
editor/display_folded = true
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="PauseLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseLayer/Pause/CenterContainer"]
margin_left = 271.0
margin_top = 131.0
margin_right = 348.0
margin_bottom = 209.0

[node name="Label" type="Label" parent="PauseLayer/Pause/CenterContainer/VBoxContainer"]
margin_right = 77.0
margin_bottom = 12.0
text = "Paused"
align = 1

[node name="Resume" type="Button" parent="PauseLayer/Pause/CenterContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 77.0
margin_bottom = 34.0
text = "Resume"

[node name="Retry" type="Button" parent="PauseLayer/Pause/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 77.0
margin_bottom = 56.0
text = "Retry Level"

[node name="Return" type="Button" parent="PauseLayer/Pause/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 77.0
margin_bottom = 78.0
text = "Back to Menu"

[node name="UI" type="CanvasLayer" parent="."]
layer = 4

[node name="HealthBar" type="AnimatedSprite" parent="UI"]
position = Vector2( 64, 33 )
scale = Vector2( 0.97, 0.98 )
frames = SubResource( 6 )
animation = "5Hp"

[node name="ManaBar" type="AnimatedSprite" parent="UI"]
position = Vector2( 64, 64 )
scale = Vector2( 0.97, 0.98 )
frames = SubResource( 7 )
animation = "5Mana"

[node name="YouDied" type="CanvasLayer" parent="."]
layer = 6

[node name="YouDied" type="Control" parent="YouDied"]
editor/display_folded = true
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="YouDied/YouDied"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="YouDied/YouDied/CenterContainer"]
margin_left = 271.0
margin_top = 142.0
margin_right = 348.0
margin_bottom = 198.0

[node name="Label" type="Label" parent="YouDied/YouDied/CenterContainer/VBoxContainer"]
margin_right = 77.0
margin_bottom = 12.0
text = "You Died!"
align = 1

[node name="RetryLv" type="Button" parent="YouDied/YouDied/CenterContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 77.0
margin_bottom = 34.0
text = "Retry"

[node name="Back" type="Button" parent="YouDied/YouDied/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 77.0
margin_bottom = 56.0
text = "Back to Menu"
[connection signal="finished" from="Click" to="." method="_on_Click_finished"]
[connection signal="finished" from="LoseSound" to="." method="_on_LoseSound_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="FireballCooldown" to="." method="_on_FireballCooldown_timeout"]
[connection signal="timeout" from="Invincibility" to="." method="_on_Invincibility_timeout"]
[connection signal="timeout" from="GameOverDelay" to="." method="_on_GameOverDelay_timeout"]
[connection signal="timeout" from="ManaRegeneration" to="." method="_on_ManaRegeneration_timeout"]
[connection signal="pressed" from="PauseLayer/Pause/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseLayer/Pause/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="PauseLayer/Pause/CenterContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="YouDied/YouDied/CenterContainer/VBoxContainer/RetryLv" to="." method="_on_RetryLv_pressed"]
[connection signal="pressed" from="YouDied/YouDied/CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
